apps/connectivity/cilium/templates/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: cilium
  labels:
    pod-security.kubernetes.io/enforce: privileged
