apps/connectivity/cilium/templates/hubble-auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-auth
  namespace: authentik
spec:
  rules:
    - host: hubble.mobrockers.com
      http:
        paths: 
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: ak-outpost-authentik-embedded-outpost
                port:
                  number: 9000
  tls:
    - hosts:
        - hubble.mobrockers.com
